--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Maunga Club - Main Page</title>
   </head>
-  <body style="background: black; animation: FadeIn 0.75s, SlideLeft 0.75s">
+  <div style="background: black; animation: FadeIn 0.75s, SlideLeft 0.75s">
     <div
       class="parallax"
       style="
@@ -87,143 +87,139 @@
         </div>
       </div>
     </div>
-    <div
-      style="
-        display: flex;
-        margin: 1vh 1vw;
-        border: solid black 0.2rem;
-        opacity: 0;
-        transform: translateX(20vw);
-        height: 55vh;
-      "
-      id="kakapo"
-    >
-      <div class="text-box" style="border-right: solid black 0.2rem">
-        <t style="font-size: 2rem; text-decoration: underline">Kakapo</t>
-        <p style="margin-top: 2vh; font-size: 1.5rem">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
-          scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
-          elit duis tristique sollicitudin nibh. Pellentesque dignissim enim sit
-          amet venenatis urna cursus eget. Mi in nulla posuere sollicitudin
-          aliquam ultrices sagittis. Sit amet cursus sit amet dictum sit amet.
-          Egestas sed sed risus pretium quam vulputate dignissim suspendisse.
-          Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Nullam
-          non nisi est sit amet. Tristique senectus et netus et malesuada fames
-          ac. Felis eget nunc lobortis mattis. Rhoncus urna neque viverra justo.
-          Habitasse platea dictumst quisque sagittis purus sit. Blandit massa
-          enim nec dui nunc mattis enim ut tellus. Lacus vel facilisis volutpat
-          est velit egestas. Quam vulputate dignissim suspendisse in est ante in
-          nibh. Vitae justo eget magna fermentum. Scelerisque mauris
-          pellentesque pulvinar pellentesque habitant morbi tristique. Dui
-          sapien eget mi proin. Dictumst quisque sagittis purus sit amet.
-          Elementum nisi quis eleifend quam adipiscing. Duis tristique
-          sollicitudin nibh sit amet commodo. Vestibulum mattis ullamcorper
-          velit sed. Aenean euismod elementum nisi quis eleifend quam.
-          Consectetur lorem donec massa sapien. Ac feugiat sed lectus
-          vestibulum. Suscipit tellus mauris a diam maecenas sed enim. Nunc vel
-          risus commodo viverra maecenas accumsan lacus vel facilisis. Viverra
-          suspendisse potenti nullam ac tortor vitae purus faucibus ornare.
-        </p>
-      </div>
-      <img
-        src="img/kakapo/cabin_exterior.jpg"
-        style="width: 30vw; object-fit: cover; object-position: 0% 100%"
-      />
-    </div>
-
-    <div
-      style="
-        display: flex;
-        margin: 1vh 1vw;
-        border: solid black 0.2rem;
-        transform: translateX(-20vw);
-        opacity: 0;
-        height: 55vh;
-      "
-      id="kereru"
-    >
-      <img
-        src="img/kereru/cabin_exterior.jpg"
-        style="object-fit: cover; object-position: 0% 0%; width: 30vw"
-      />
-      <div class="text-box" style="border-left: solid black 0.2rem">
-        <t style="font-size: 2rem; text-decoration: underline">Kereru</t>
-        <p style="margin-top: 2vh; font-size: 1.5rem">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
-          scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
-          elit duis tristique sollicitudin nibh. Pellentesque dignissim enim sit
-          amet venenatis urna cursus eget. Mi in nulla posuere sollicitudin
-          aliquam ultrices sagittis. Sit amet cursus sit amet dictum sit amet.
-          Egestas sed sed risus pretium quam vulputate dignissim suspendisse.
-          Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Nullam
-          non nisi est sit amet. Tristique senectus et netus et malesuada fames
-          ac. Felis eget nunc lobortis mattis. Rhoncus urna neque viverra justo.
-          Habitasse platea dictumst quisque sagittis purus sit. Blandit massa
-          enim nec dui nunc mattis enim ut tellus. Lacus vel facilisis volutpat
-          est velit egestas. Quam vulputate dignissim suspendisse in est ante in
-          nibh. Vitae justo eget magna fermentum. Scelerisque mauris
-          pellentesque pulvinar pellentesque habitant morbi tristique. Dui
-          sapien eget mi proin. Dictumst quisque sagittis purus sit amet.
-          Elementum nisi quis eleifend quam adipiscing. Duis tristique
-          sollicitudin nibh sit amet commodo. Vestibulum mattis ullamcorper
-          velit sed. Aenean euismod elementum nisi quis eleifend quam.
-          Consectetur lorem donec massa sapien. Ac feugiat sed lectus
-          vestibulum. Suscipit tellus mauris a diam maecenas sed enim. Nunc vel
-          risus commodo viverra maecenas accumsan lacus vel facilisis. Viverra
-          suspendisse potenti nullam ac tortor vitae purus faucibus ornare.
-        </p>
-      </div>
-    </div>
-
-    <div
-      style="
-        display: flex;
-        margin: 1vh 1vw;
-        border: solid black 0.2rem;
-        transform: translateX(20vw);
-        opacity: 0;
-      "
-      id="pukeko"
-    >
+    <div class="container">
       <div
-        class="text-box"
-        style="border-right: solid black 0.2rem; height: 55vh"
+        style="
+          display: flex;
+          margin: 1vh 1vw;
+          border: solid black 0.2rem;
+        "
+        id="kakapo"
+        class="panel"
       >
-        <t style="font-size: 2rem; text-decoration: underline">Kereru</t>
-        <p style="margin-top: 2vh; font-size: 1.5rem">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
-          scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
-          elit duis tristique sollicitudin nibh. Pellentesque dignissim enim sit
-          amet venenatis urna cursus eget. Mi in nulla posuere sollicitudin
-          aliquam ultrices sagittis. Sit amet cursus sit amet dictum sit amet.
-          Egestas sed sed risus pretium quam vulputate dignissim suspendisse.
-          Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Nullam
-          non nisi est sit amet. Tristique senectus et netus et malesuada fames
-          ac. Felis eget nunc lobortis mattis. Rhoncus urna neque viverra justo.
-          Habitasse platea dictumst quisque sagittis purus sit. Blandit massa
-          enim nec dui nunc mattis enim ut tellus. Lacus vel facilisis volutpat
-          est velit egestas. Quam vulputate dignissim suspendisse in est ante in
-          nibh. Vitae justo eget magna fermentum. Scelerisque mauris
-          pellentesque pulvinar pellentesque habitant morbi tristique. Dui
-          sapien eget mi proin. Dictumst quisque sagittis purus sit amet.
-          Elementum nisi quis eleifend quam adipiscing. Duis tristique
-          sollicitudin nibh sit amet commodo. Vestibulum mattis ullamcorper
-          velit sed. Aenean euismod elementum nisi quis eleifend quam.
-          Consectetur lorem donec massa sapien. Ac feugiat sed lectus
-          vestibulum. Suscipit tellus mauris a diam maecenas sed enim. Nunc vel
-          risus commodo viverra maecenas accumsan lacus vel facilisis. Viverra
-          suspendisse potenti nullam ac tortor vitae purus faucibus ornare.
-        </p>
+        <div class="text-box" style="border-right: solid black 0.2rem">
+          <t style="font-size: 2rem; text-decoration: underline">Kakapo</t>
+          <p style="margin-top: 2vh; font-size: 1.5rem">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
+            scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
+            elit duis tristique sollicitudin nibh. Pellentesque dignissim enim sit
+            amet venenatis urna cursus eget. Mi in nulla posuere sollicitudin
+            aliquam ultrices sagittis. Sit amet cursus sit amet dictum sit amet.
+            Egestas sed sed risus pretium quam vulputate dignissim suspendisse.
+            Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Nullam
+            non nisi est sit amet. Tristique senectus et netus et malesuada fames
+            ac. Felis eget nunc lobortis mattis. Rhoncus urna neque viverra justo.
+            Habitasse platea dictumst quisque sagittis purus sit. Blandit massa
+            enim nec dui nunc mattis enim ut tellus. Lacus vel facilisis volutpat
+            est velit egestas. Quam vulputate dignissim suspendisse in est ante in
+            nibh. Vitae justo eget magna fermentum. Scelerisque mauris
+            pellentesque pulvinar pellentesque habitant morbi tristique. Dui
+            sapien eget mi proin. Dictumst quisque sagittis purus sit amet.
+            Elementum nisi quis eleifend quam adipiscing. Duis tristique
+            sollicitudin nibh sit amet commodo. Vestibulum mattis ullamcorper
+            velit sed. Aenean euismod elementum nisi quis eleifend quam.
+            Consectetur lorem donec massa sapien. Ac feugiat sed lectus
+            vestibulum. Suscipit tellus mauris a diam maecenas sed enim. Nunc vel
+            risus commodo viverra maecenas accumsan lacus vel facilisis. Viverra
+            suspendisse potenti nullam ac tortor vitae purus faucibus ornare.
+          </p>
+        </div>
+        <img
+          src="img/kakapo/cabin_exterior.jpg"
+          style="width: 30vw; object-fit: cover; object-position: 0% 100%"
+        />
       </div>
-      <img
-        src="img/pukeko/chalet_exterior.jpg"
-        style="width: 30vw; object-fit: cover; object-position: 0% 100%"
-      />
-    </div>
 
+      <div
+        style="
+          display: flex;
+          margin: 1vh 1vw;
+          border: solid black 0.2rem;
+        "
+        id="kereru"
+        class="panel"
+      >
+        <img
+          src="img/kereru/cabin_exterior.jpg"
+          style="object-fit: cover; object-position: 0% 0%; width: 30vw"
+        />
+        <div class="text-box" style="border-left: solid black 0.2rem">
+          <t style="font-size: 2rem; text-decoration: underline">Kereru</t>
+          <p style="margin-top: 2vh; font-size: 1.5rem">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
+            scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
+            elit duis tristique sollicitudin nibh. Pellentesque dignissim enim sit
+            amet venenatis urna cursus eget. Mi in nulla posuere sollicitudin
+            aliquam ultrices sagittis. Sit amet cursus sit amet dictum sit amet.
+            Egestas sed sed risus pretium quam vulputate dignissim suspendisse.
+            Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Nullam
+            non nisi est sit amet. Tristique senectus et netus et malesuada fames
+            ac. Felis eget nunc lobortis mattis. Rhoncus urna neque viverra justo.
+            Habitasse platea dictumst quisque sagittis purus sit. Blandit massa
+            enim nec dui nunc mattis enim ut tellus. Lacus vel facilisis volutpat
+            est velit egestas. Quam vulputate dignissim suspendisse in est ante in
+            nibh. Vitae justo eget magna fermentum. Scelerisque mauris
+            pellentesque pulvinar pellentesque habitant morbi tristique. Dui
+            sapien eget mi proin. Dictumst quisque sagittis purus sit amet.
+            Elementum nisi quis eleifend quam adipiscing. Duis tristique
+            sollicitudin nibh sit amet commodo. Vestibulum mattis ullamcorper
+            velit sed. Aenean euismod elementum nisi quis eleifend quam.
+            Consectetur lorem donec massa sapien. Ac feugiat sed lectus
+            vestibulum. Suscipit tellus mauris a diam maecenas sed enim. Nunc vel
+            risus commodo viverra maecenas accumsan lacus vel facilisis. Viverra
+            suspendisse potenti nullam ac tortor vitae purus faucibus ornare.
+          </p>
+        </div>
+      </div>
+
+      <div
+        style="
+          display: flex;
+          margin: 1vh 1vw;
+          border: solid black 0.2rem;
+        "
+        id="pukeko"
+        class="panel"
+      >
+        <div
+          class="text-box"
+          style="border-right: solid black 0.2rem;"
+        >
+          <t style="font-size: 2rem; text-decoration: underline">Kereru</t>
+          <p style="margin-top: 2vh; font-size: 1.5rem">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
+            scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
+            elit duis tristique sollicitudin nibh. Pellentesque dignissim enim sit
+            amet venenatis urna cursus eget. Mi in nulla posuere sollicitudin
+            aliquam ultrices sagittis. Sit amet cursus sit amet dictum sit amet.
+            Egestas sed sed risus pretium quam vulputate dignissim suspendisse.
+            Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Nullam
+            non nisi est sit amet. Tristique senectus et netus et malesuada fames
+            ac. Felis eget nunc lobortis mattis. Rhoncus urna neque viverra justo.
+            Habitasse platea dictumst quisque sagittis purus sit. Blandit massa
+            enim nec dui nunc mattis enim ut tellus. Lacus vel facilisis volutpat
+            est velit egestas. Quam vulputate dignissim suspendisse in est ante in
+            nibh. Vitae justo eget magna fermentum. Scelerisque mauris
+            pellentesque pulvinar pellentesque habitant morbi tristique. Dui
+            sapien eget mi proin. Dictumst quisque sagittis purus sit amet.
+            Elementum nisi quis eleifend quam adipiscing. Duis tristique
+            sollicitudin nibh sit amet commodo. Vestibulum mattis ullamcorper
+            velit sed. Aenean euismod elementum nisi quis eleifend quam.
+            Consectetur lorem donec massa sapien. Ac feugiat sed lectus
+            vestibulum. Suscipit tellus mauris a diam maecenas sed enim. Nunc vel
+            risus commodo viverra maecenas accumsan lacus vel facilisis. Viverra
+            suspendisse potenti nullam ac tortor vitae purus faucibus ornare.
+          </p>
+        </div>
+        <img
+          src="img/pukeko/chalet_exterior.jpg"
+          style="width: 30vw; object-fit: cover; object-position: 0% 100%"
+        />
+      </div>
+    </div>
     <div style="height: 100vh"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
