--- a/index.html
+++ b/index.html
@@ -3,12 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'> <!-- Embedded Open Sans font so it can be used in the website-->
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/animations.css" />
 
     <title>Maunga Club - Main Page</title>
   </head>
-  <body style="background: black">
+  <body style="background: black; font-family: 'Open Sans'" class="body">
+    <div id="navbar">
+      <div
+        style="
+          margin: 0px 2vw;
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+          align-items: center;
+        "
+      >
+        <img src="img/Maunga_Club_white.png" style="height: 8rem" />
+        <nav>
+          <input
+            type="button"
+            onclick="window.location.href"
+            class="navigation_button"
+            value="COMPARE"
+          >
+          <input
+            type="button"
+            onclick="window.location.href='index.html'"
+            class="navigation_button"
+            value="PRICING"
+          >
+          <input
+            type="button"
+            onclick="window.location.href='index.html'"
+            class="navigation_button"
+            value="REGISTER"
+          >
+          <input
+            type="button"
+            onclick="window.location.href='index.html'"
+            class="navigation_button"
+            value="LOGIN"
+          >
+        </nav>
+      </div>
+    </div> 
     <div
       class="parallax"
       style="
@@ -18,58 +58,10 @@
           ),
           url(img/mountain_view_1.jpg);
         justify-content: center;
+        
       "
     >
-      <header
-        style="
-          background-color: transparent;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          width: 100%;
-          margin-bottom: 20vh;
-        "
-        id="navbar"
-      >
-        <div
-          style="
-            padding-top: 1%;
-            margin: 0px 2vw;
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            align-items: center;
-          "
-        >
-          <img src="img/Maunga_Club_white.png" style="height: 8rem" />
-          <nav>
-            <input
-              type="button"
-              onclick="window.location.href"
-              class="navigation_button"
-              value="COMPARE"
-            />
-            <input
-              type="button"
-              onclick="window.location.href='index.html'"
-              class="navigation_button"
-              value="PRICING"
-            />
-            <input
-              type="button"
-              onclick="window.location.href='index.html'"
-              class="navigation_button"
-              value="REGISTER"
-            />
-            <input
-              type="button"
-              onclick="window.location.href='index.html'"
-              class="navigation_button"
-              value="LOGIN"
-            />
-          </nav>
-        </div>
-      </header>
+
       <div class="about-us">
         <t style="font-size: 3rem; font-weight: bold">About Us</t>
         <div class="about-us-para">
@@ -87,125 +79,43 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <section
-        style="display: flex; border: solid black 0.2rem; width: 100vw"
-        id="kakapo"
-      >
-        <div class="text-box" style="border-right: solid black 0.2rem">
-          <t style="font-size: 2rem; text-decoration: underline">Kakapo</t>
-          <p style="margin-top: 2vh; font-size: 1.5rem">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
-            scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
-            elit duis tristique sollicitudin nibh. Pellentesque dignissim enim
-            sit amet venenatis urna cursus eget. Mi in nulla posuere
-            sollicitudin aliquam ultrices sagittis. Sit amet cursus sit amet
-            dictum sit amet. Egestas sed sed risus pretium quam vulputate
-            dignissim suspendisse. Sed vulputate odio ut enim blandit volutpat
-            maecenas volutpat. Nullam non nisi est sit amet. Tristique senectus
-            et netus et malesuada fames ac. Felis eget nunc lobortis mattis.
-            Rhoncus urna neque viverra justo. Habitasse platea dictumst quisque
-            sagittis purus sit. Blandit massa enim nec dui nunc mattis enim ut
-            tellus. Lacus vel facilisis volutpat est velit egestas. Quam
-            vulputate dignissim suspendisse in est ante in nibh. Vitae justo
-            eget magna fermentum. Scelerisque mauris pellentesque pulvinar
-            pellentesque habitant morbi tristique. Dui sapien eget mi proin.
-            Dictumst quisque sagittis purus sit amet. Elementum nisi quis
-            eleifend quam adipiscing. Duis tristique sollicitudin nibh sit amet
-            commodo. Vestibulum mattis ullamcorper velit sed. Aenean euismod
-            elementum nisi quis eleifend quam. Consectetur lorem donec massa
-            sapien. Ac feugiat sed lectus vestibulum. Suscipit tellus mauris a
-            diam maecenas sed enim. Nunc vel risus commodo viverra maecenas
-            accumsan lacus vel facilisis. Viverra suspendisse potenti nullam ac
-            tortor vitae purus faucibus ornare.
-          </p>
-        </div>
-        <img
-          src="img/kakapo/cabin_exterior.jpg"
-          style="width: 30%; object-fit: cover; object-position: 0% 100%"
-        />
-      </section>
-
-      <section
-        style="display: flex; border: solid black 0.2rem"
-        id="kereru"
-        class="panel"
-      >
-        <img
-          src="img/kereru/cabin_exterior.jpg"
-          style="width: 30%; object-fit: cover; object-position: 0% 0%"
-        />
-        <div class="text-box" style="border-left: solid black 0.2rem">
-          <t style="font-size: 2rem; text-decoration: underline">Kereru</t>
-          <p style="margin-top: 2vh; font-size: 1.5rem">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
-            scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
-            elit duis tristique sollicitudin nibh. Pellentesque dignissim enim
-            sit amet venenatis urna cursus eget. Mi in nulla posuere
-            sollicitudin aliquam ultrices sagittis. Sit amet cursus sit amet
-            dictum sit amet. Egestas sed sed risus pretium quam vulputate
-            dignissim suspendisse. Sed vulputate odio ut enim blandit volutpat
-            maecenas volutpat. Nullam non nisi est sit amet. Tristique senectus
-            et netus et malesuada fames ac. Felis eget nunc lobortis mattis.
-            Rhoncus urna neque viverra justo. Habitasse platea dictumst quisque
-            sagittis purus sit. Blandit massa enim nec dui nunc mattis enim ut
-            tellus. Lacus vel facilisis volutpat est velit egestas. Quam
-            vulputate dignissim suspendisse in est ante in nibh. Vitae justo
-            eget magna fermentum. Scelerisque mauris pellentesque pulvinar
-            pellentesque habitant morbi tristique. Dui sapien eget mi proin.
-            Dictumst quisque sagittis purus sit amet. Elementum nisi quis
-            eleifend quam adipiscing. Duis tristique sollicitudin nibh sit amet
-            commodo. Vestibulum mattis ullamcorper velit sed. Aenean euismod
-            elementum nisi quis eleifend quam. Consectetur lorem donec massa
-            sapien. Ac feugiat sed lectus vestibulum. Suscipit tellus mauris a
-            diam maecenas sed enim. Nunc vel risus commodo viverra maecenas
-            accumsan lacus vel facilisis. Viverra suspendisse potenti nullam ac
-            tortor vitae purus faucibus ornare.
-          </p>
-        </div>
-      </section>
-
-      <section
-        style="display: flex; border: solid black 0.2rem"
-        id="pukeko"
-        class="panel"
-      >
-        <div class="text-box" style="border-right: solid black 0.2rem">
-          <t style="font-size: 2rem; text-decoration: underline">Pukeko</t>
-          <p style="margin-top: 2vh; font-size: 1.5rem">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus
-            scelerisque eleifend donec pretium vulputate. Consectetur adipiscing
-            elit duis tristique sollicitudin nibh. Pellentesque dignissim enim
-            sit amet venenatis urna cursus eget. Mi in nulla posuere
-            sollicitudin aliquam ultrices sagittis. Sit amet cursus sit amet
-            dictum sit amet. Egestas sed sed risus pretium quam vulputate
-            dignissim suspendisse. Sed vulputate odio ut enim blandit volutpat
-            maecenas volutpat. Nullam non nisi est sit amet. Tristique senectus
-            et netus et malesuada fames ac. Felis eget nunc lobortis mattis.
-            Rhoncus urna neque viverra justo. Habitasse platea dictumst quisque
-            sagittis purus sit. Blandit massa enim nec dui nunc mattis enim ut
-            tellus. Lacus vel facilisis volutpat est velit egestas. Quam
-            vulputate dignissim suspendisse in est ante in nibh. Vitae justo
-            eget magna fermentum. Scelerisque mauris pellentesque pulvinar
-            pellentesque habitant morbi tristique. Dui sapien eget mi proin.
-            Dictumst quisque sagittis purus sit amet. Elementum nisi quis
-            eleifend quam adipiscing. Duis tristique sollicitudin nibh sit amet
-            commodo. Vestibulum mattis ullamcorper velit sed. Aenean euismod
-            elementum nisi quis eleifend quam. Consectetur lorem donec massa
-            sapien. Ac feugiat sed lectus vestibulum. Suscipit tellus mauris a
-            diam maecenas sed enim. Nunc vel risus commodo viverra maecenas
-            accumsan lacus vel facilisis. Viverra suspendisse potenti nullam ac
-            tortor vitae purus faucibus ornare.
-          </p>
-        </div>
-        <img
-          src="img/pukeko/chalet_exterior.jpg"
-          style="width: 30%; object-fit: cover; object-position: 0% 100%"
-        />
-      </section>
+    <div class="parent">
+      <div class="container">
+        <section id="kakapo" class="panel">
+          <div class="text-box">
+            <h2>Kakapo</h2>
+            <ul style="list-style-type: disc">
+              <li>Largest of the chalets</li>
+              <li>large kitchen, dining and living area</li>
+              <li>Great amenities</li>
+              <li>Maximum Adults: 10</li>
+              <li>Maximum Children: 30</li>
+            </ul>
+          </div>
+        </section>
+        <section id="kereru" class="panel">
+          <div class="text-box">
+            <h2>Kereru</h2>
+            <ul style="list-style-type: disc">
+              <li>Great for large groups/families wanting a chalet to themselves</li>
+              <li>Limits on adult/child number ensure comfortable stay</li>
+              <li>Maximum Adults: 6</li>
+              <li>Maximum Children: 15</li>
+            </ul>
+        </section>
+        <section id="pukeko" class="panel">
+          <div class="text-box">
+            <h2>Pukeko</h2>
+            <ul style="list-style-type: disc">
+            <li>Great option for a family</li>
+            <li>2 bedrooms</li>
+            <li>Perfect for families with 2-4 children</li>
+            <li>Separate living area</li>
+            <li>Maximum Adults: 2</li>
+            <li>Maximum Children: 4</li>
+            </ul>
+        </section>
+      </div>
     </div>
     <div style="height: 100vh"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
