--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'> <!-- Embedded Open Sans font so it can be used in the website-->
+    <link href="https://fonts.cdnfonts.com/css/roman-new-times" rel="stylesheet"> <!-- Embedded new times roman font so it can always be used on the website -->
     <link rel="stylesheet" href="styles/styles.css" />
 
     <title>Maunga Club - Main Page</title>
@@ -23,13 +23,13 @@
         <nav>
           <input
             type="button"
-            onclick="ScrollDown(container, 0.4);"
+            onclick="ScrollDown(container, 0.5);"
             class="navigation_button"
             value="COMPARE"
           >
           <input
             type="button"
-            onclick="ScrollDown(image_container, 80);"
+            onclick="ScrollDown(gallery, 80);"
             class="navigation_button"
             value="GALLERY"
           >
@@ -122,24 +122,27 @@
       </section>
     </div>
 
-    <div style="height: 100vh; 
-    display: flex;
-    flex-direction: row;
-    width: fit-content;  
-    content-visibility: auto;" id="image_container">
-      <img src="img/kakapo/bunk_room.jpg" class="image">
-      <img src="img/kakapo/cabin_exterior.jpg" class="image">
-      <img src="img/kakapo/cabin_view.jpg" class="image">
-      <img src="img/kakapo/hallway.jpg" class="image">
-      <img src="img/kereru/adult_bedroom.jpg" class="image">
-      <img src="img/kereru/cabin_exterior.jpg" class="image">
-      <img src="img/kereru/kids_bedroom.jpg" class="image">
-      <img src="img/kereru/kitchen.jpg" class="image">
-      <img src="img/pukeko/adult_bedroom.jpg" class="image">
-      <img src="img/pukeko/bathroom.jpg" class="image">
-      <img src="img/pukeko/chalet_exterior.jpg" class="image">
-      <img src="img/pukeko/chalet_view.jpg" class="image">
+    <div id="gallery">
+      <h2>Gallery</h2>
+      <div id="imgcontainer">
+        <img src="img/kakapo/bunk_room.jpg" class="image" alt="Kakapo Bunk Room">
+        <img src="img/kakapo/cabin_exterior.jpg" class="image">
+        <img src="img/kakapo/cabin_view.jpg" class="image">
+        <img src="img/kakapo/hallway.jpg" class="image">
+        <img src="img/kereru/adult_bedroom.jpg" class="image">
+        <img src="img/kereru/cabin_exterior.jpg" class="image">
+        <img src="img/kereru/kids_bedroom.jpg" class="image">
+        <img src="img/kereru/kitchen.jpg" class="image">
+        <img src="img/pukeko/adult_bedroom.jpg" class="image">
+        <img src="img/pukeko/bathroom.jpg" class="image">
+        <img src="img/pukeko/chalet_exterior.jpg" class="image">
+        <img src="img/pukeko/chalet_view.jpg" class="image">
+      </div>
     </div>
+    <div id="fullpage" onclick="this.style.display='none';"></div>
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
