--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.cdnfonts.com/css/roman-new-times" rel="stylesheet"> <!-- Embedded new times roman font so it can always be used on the website -->
+    <link
+      href="https://fonts.cdnfonts.com/css/roman-new-times"
+      rel="stylesheet"
+    />
+    <!-- Embedded new times roman font so it can always be used on the website -->
     <link rel="stylesheet" href="styles/styles.css" />
 
     <title>Maunga Club - Main Page</title>
@@ -23,38 +27,37 @@
         <nav>
           <input
             type="button"
-            onclick="ScrollDown(kakapo);"
+            onclick="window.location.href='#kakapo'"
             class="navigation_button"
             value="COMPARE"
-          >
+          />
           <input
             type="button"
-            onclick="ScrollDown(gallery);"
+            onclick="window.location.href='#gallery'"
             class="navigation_button"
             value="GALLERY"
-          >
+          />
           <input
             type="button"
             onclick="window.location.href='index.html'"
             class="navigation_button"
             value="PRICING"
-          >
+          />
           <input
             type="button"
             onclick="window.location.href='index.html'"
             class="navigation_button"
             value="REGISTER"
-          >
+          />
           <input
             type="button"
             onclick="window.location.href='index.html'"
             class="navigation_button"
             value="LOGIN"
-          >
-          </script>
+          />
         </nav>
       </div>
-    </div> 
+    </div>
     <div
       class="parallax"
       style="
@@ -64,12 +67,10 @@
           ),
           url(img/mountain_view_1.jpg);
         justify-content: center;
-        
       "
     >
-
       <div class="about-us">
-        <t style="font-size: 3rem; font-weight: bold">About Us</t>
+        <h1 style="font-size: 3rem; font-weight: bold">About Us</h1>
         <div class="about-us-para">
           <p style="font-size: 1.5rem">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -97,68 +98,94 @@
         </ul>
       </div>
       <div class="image-container">
-        <img src="img/kakapo/bunk_room.jpg" class="image2 fullscreen-img" alt="Kakapo Bunk Room">
-        <img src="img/kakapo/cabin_exterior.jpg" class="image2 fullscreen-img">
-        <img src="img/kakapo/cabin_view.jpg" class="image2 fullscreen-img">
-        <img src="img/kakapo/hallway.jpg" class="image2 fullscreen-img">
+        <img
+          src="img/kakapo/bunk_room.jpg"
+          class="image2 fullscreen-img"
+          alt="Kakapo Bunk Room"
+        />
+        <img
+          src="img/kakapo/cabin_exterior.jpg"
+          class="image2 fullscreen-img"
+        />
+        <img src="img/kakapo/cabin_view.jpg" class="image2 fullscreen-img" />
+        <img src="img/kakapo/hallway.jpg" class="image2 fullscreen-img" />
       </div>
     </div>
     <div id="kereru" class="panel">
       <div class="text-box">
         <h2>Kereru</h2>
         <ul style="list-style-type: disc">
-          <li>Great for large groups/families wanting a chalet to themselves</li>
+          <li>
+            Great for large groups/families wanting a chalet to themselves
+          </li>
           <li>Limits on adult/child number ensure comfortable stay</li>
           <li>Maximum Adults: 6</li>
           <li>Maximum Children: 15</li>
         </ul>
       </div>
       <div class="image-container">
-        <img src="img/kereru/adult_bedroom.jpg" class="image2 fullscreen-img">
-        <img src="img/kereru/cabin_exterior.jpg" class="image2 fullscreen-img">
-        <img src="img/kereru/kids_bedroom.jpg" class="image2 fullscreen-img">
-        <img src="img/kereru/kitchen.jpg" class="image2 fullscreen-img">
+        <img src="img/kereru/adult_bedroom.jpg" class="image2 fullscreen-img" />
+        <img
+          src="img/kereru/cabin_exterior.jpg"
+          class="image2 fullscreen-img"
+        />
+        <img src="img/kereru/kids_bedroom.jpg" class="image2 fullscreen-img" />
+        <img src="img/kereru/kitchen.jpg" class="image2 fullscreen-img" />
       </div>
-    </div>  
+    </div>
     <div id="pukeko" class="panel">
       <div class="text-box">
         <h2>Pukeko</h2>
         <ul style="list-style-type: disc">
-        <li>Great option for a family</li>
-        <li>2 bedrooms</li>
-        <li>Perfect for families with 2-4 children</li>
-        <li>Separate living area</li>
-        <li>Maximum Adults: 2</li>
-        <li>Maximum Children: 4</li>
+          <li>Great option for a family</li>
+          <li>2 bedrooms</li>
+          <li>Perfect for families with 2-4 children</li>
+          <li>Separate living area</li>
+          <li>Maximum Adults: 2</li>
+          <li>Maximum Children: 4</li>
         </ul>
       </div>
       <div class="image-container">
-        <img src="img/pukeko/adult_bedroom.jpg" class="image2 fullscreen-img">
-        <img src="img/pukeko/bathroom.jpg" class="image2 fullscreen-img">
-        <img src="img/pukeko/chalet_exterior.jpg" class="image2 fullscreen-img">
-        <img src="img/pukeko/chalet_view.jpg" class="image2 fullscreen-img">
+        <img src="img/pukeko/adult_bedroom.jpg" class="image2 fullscreen-img" />
+        <img src="img/pukeko/bathroom.jpg" class="image2 fullscreen-img" />
+        <img
+          src="img/pukeko/chalet_exterior.jpg"
+          class="image2 fullscreen-img"
+        />
+        <img src="img/pukeko/chalet_view.jpg" class="image2 fullscreen-img" />
       </div>
     </div>
     <div id="gallery">
       <h2>Gallery</h2>
       <div id="imgcontainer">
-        <img src="img/kakapo/bunk_room.jpg" class="image fullscreen-img" alt="Kakapo Bunk Room">
-        <img src="img/kakapo/cabin_exterior.jpg" class="image fullscreen-img">
-        <img src="img/kakapo/cabin_view.jpg" class="image fullscreen-img">
-        <img src="img/kakapo/hallway.jpg" class="image fullscreen-img">
-        <img src="img/kereru/adult_bedroom.jpg" class="image fullscreen-img">
-        <img src="img/kereru/cabin_exterior.jpg" class="image fullscreen-img">
-        <img src="img/kereru/kids_bedroom.jpg" class="image fullscreen-img">
-        <img src="img/kereru/kitchen.jpg" class="image fullscreen-img">
-        <img src="img/pukeko/adult_bedroom.jpg" class="image fullscreen-img">
-        <img src="img/pukeko/bathroom.jpg" class="image fullscreen-img">
-        <img src="img/pukeko/chalet_exterior.jpg" class="image fullscreen-img">
-        <img src="img/pukeko/chalet_view.jpg" class="image fullscreen-img">
+        <img
+          src="img/kakapo/bunk_room.jpg"
+          class="image fullscreen-img"
+          alt="Kakapo Bunk Room"
+        />
+        <img src="img/kakapo/cabin_exterior.jpg" class="image fullscreen-img" />
+        <img src="img/kakapo/cabin_view.jpg" class="image fullscreen-img" />
+        <img src="img/kakapo/hallway.jpg" class="image fullscreen-img" />
+        <img src="img/kereru/adult_bedroom.jpg" class="image fullscreen-img" />
+        <img src="img/kereru/cabin_exterior.jpg" class="image fullscreen-img" />
+        <img src="img/kereru/kids_bedroom.jpg" class="image fullscreen-img" />
+        <img src="img/kereru/kitchen.jpg" class="image fullscreen-img" />
+        <img src="img/pukeko/adult_bedroom.jpg" class="image fullscreen-img" />
+        <img src="img/pukeko/bathroom.jpg" class="image fullscreen-img" />
+        <img
+          src="img/pukeko/chalet_exterior.jpg"
+          class="image fullscreen-img"
+        />
+        <img src="img/pukeko/chalet_view.jpg" class="image fullscreen-img" />
       </div>
     </div>
-    <div id="fullpage" onclick="this.style.display='none'; setDirection(1)"></div>
+    <div
+      id="fullpage"
+      onclick="this.style.display='none'; setDirection(1)"
+    ></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="js/triggerscroll.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   </body>
 </html>
